fix(button menu): small tweak to fix alignment within an moj-button-group without js

--- a/src/moj/objects/_button-group.scss
+++ b/src/moj/objects/_button-group.scss
@@ -1,4 +1,3 @@
-
 .moj-button-group {
   $horizontal-gap: govuk-spacing(3);
   $vertical-gap: govuk-spacing(3);
@@ -6,32 +5,27 @@
 
   @extend .govuk-button-group;
 
-
   &--inline {
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: baseline;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: baseline;
     gap: $horizontal-gap;
     margin-right: 0;
 
-  .moj-button-menu {
+    .moj-button-menu {
       margin-bottom: $vertical-gap + $button-shadow-size;
     }
 
-  .moj-button-menu .moj-button-menu__toggle-button {
+    .moj-button-menu .moj-button-menu__toggle-button {
       vertical-align: baseline;
     }
 
-  .moj-button-menu,
-  .govuk-button,
-  .govuk-link {
-    width: auto;
-    margin-right: 0;
+    > .moj-button-menu,
+    > .govuk-button,
+    > .govuk-link {
+      width: auto;
+      margin-right: 0;
       margin-bottom: 0;
     }
-
-  /* :is(.govuk, .moj-button-menu, .govuk-link) + :is(.govuk, .moj-button-menu, .govuk-link) { */
-  /*     margin-top: $horizontal-gap; */
-  /*   } */
   }
 }
